# protobuf_client

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.orig~  CMakeLists.txt~  README.md  package.xml  package.xml~
include/protobuf_client/: protobuf_client.h  protobuf_client.h~
launch/: protobuf_client.launch
msg/: Gateway.msg~
nodes/: protobuf_client.cpp  protobuf_client.cpp~  protobuf_client_node.cpp  protobuf_client_node.cpp~
scripts/: publish_to_gateway.py  publish_to_gateway.py~
src/: protobuf_client.cpp  protobuf_client.cpp~
